# gcta

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CommFunc.cpp  CommFunc.h  Dockerfile  GlobalVarb.h  Makefile  README.md  SimplexSolver.cpp  SimplexSolver.h  StatFunc.cpp  StatFunc.h  StrFunc.cpp  StrFunc.h  UnusedCode.cpp  bivar_reml.cpp  data.cpp  edata.cpp  est_hsq.cpp  gbat.cpp  gcta.h  grm.cpp  grm_wt.cpp  gwas_simu.cpp  joint_meta.cpp  ld.cpp  mbat.cpp  mkl.cpp  mlm_assoc.cpp  option.cpp  popu_genet.cpp  read_imput.cpp  reml_within_family.cpp  sbat.cpp
cmake/Modules/: Findzstd.cmake
docs/changes/: acat.md
edits_Loggers_Sept26/LJ_Sept10/: Logger.[]_folder-main.docx  Logger.[]_folder-src.docx  Logger_folder-main_v2.docx  Logger_folder-src_v2.docx  std_Logger_folder-main.docx  std_Logger_folder-src.docx
edits_Loggers_Sept26/edits_from_JY/: Logger.[]_folder-main jy.docx  Logger.[]_folder-src jy.docx  Logger_folder-main_v2[1] jy.docx  Logger_folder-src_v2 jy.docx  std_Logger_folder-main jy.docx  std_Logger_folder-src jy.docx
edits_Loggers_Sept26/raw_logger_Sept10/: Logger.[]_folder-main.txt  Logger.[]_folder-src.txt  Logger_folder-main_v2.txt  Logger_folder-src_v2.txt  std_Logger_folder-main.txt  std_Logger_folder-src.txt
gcta.xcodeproj/: project.pbxproj
gcta.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
gcta.xcodeproj/project.xcworkspace/xcuserdata/j.zeng.xcuserdatad/: UserInterfaceState.xcuserstate
gcta.xcodeproj/project.xcworkspace/xcuserdata/uqjzeng1.xcuserdatad/: UserInterfaceState.xcuserstate
gcta.xcodeproj/xcuserdata/j.zeng.xcuserdatad/xcschemes/: gcta.xcscheme  xcschememanagement.plist
gcta.xcodeproj/xcuserdata/uqjzeng1.xcuserdatad/xcschemes/: gcta.xcscheme
gcta/gcta/: CommFunc.cpp  StatFunc.cpp  StrFunc.cpp  bivar_reml.cpp  data.cpp  dcdflib.cpp  dcdflib.h  eigen_func.cpp  ejma.cpp  est_hsq.cpp  gcta.h  grm.cpp  gwas_simu.cpp  ld.cpp  mkl.cpp  mlm_assoc.cpp  option.cpp  popu_genet.cpp  reml_within_family.cpp
gcta/gcta.xcodeproj/project.xcworkspace/xcuserdata/uqjzeng1.xcuserdatad/: UserInterfaceState.xcuserstate
gcta_win64/: gcta_win64.sln  gcta_win64.vcxproj  gcta_win64.vcxproj.filters  readme.txt
gcta_win64/vs/: gcta64.sln  gcta64.vcxproj  gcta64.vcxproj.filters
include/: AsyncBuffer.hpp  Covar.h  FastFAM.h  GRM.h  Geno.h  LD.h  Logger.h  Marker.h  Matrix.hpp  OptionIO.h  Pheno.h  StatLib.h  ThreadPool.h  acat.hpp  constants.hpp  cpu.h  cpu_f77blas.h  mem.hpp  tables.h  utils.hpp
main/: CMakeLists.txt  CommFunc.cpp  CommFunc.h  StatFunc.cpp  StatFunc.h  StrFunc.cpp  StrFunc.h  bivar_reml.cpp  cdflib.h  data.cpp  dcdflib.cpp  edata.cpp  eigen_func.h  ejma.cpp  est_hsq.cpp  gbat.cpp  gcta.h  grm.cpp  gsmr.cpp  gwas_simu.cpp  joint_meta.cpp  ld.cpp  mbat.cpp  mkl.cpp  mlm_assoc.cpp  mtcojo.cpp  option.cpp  option.h  pc_adjust.cpp  popu_genet.cpp  raw_geno.cpp  reml_within_family.cpp  sbat.cpp
script/: install_prerequisites.sh
src/: CMakeLists.txt  Covar.cpp  FastFAM.cpp  GRM.cpp  Geno.cpp  LD.cpp  Logger.cpp  Marker.cpp  OptionIO.cpp  Pheno.cpp  StatLib.cpp  ThreadPool.cpp  acat.c  main.cpp  mem.cpp  tables.cpp  utils.cpp
src/Pgenlib/: CMakeLists.txt  PgenReader.cpp
src/core/: Covar.cpp  FastFAM.cpp  Geno.cpp  Logger.cpp  Marker.cpp  StatLib.cpp  ThreadPool.cpp  acat.c  config.h  tables.cpp
src/main/: CMakeLists.txt  CommFunc.cpp  CommFunc.h  StatFunc.h  StrFunc.h  bivar_reml.cpp  data.cpp  dcdflib.cpp  edata.cpp  eigen_func.cpp  ejma.cpp  gbat.cpp  gcta.h  gsmr.cpp  joint_meta.cpp  ld.cpp  mbat.cpp  mkl.cpp  mlm_assoc.cpp  option.cpp  option.h  popu_genet.cpp
submods/: CMakeLists.txt
submods/Pgenlib/: CMakeLists.txt  PgenReader.cpp  PgenReader.h
test/: CMakeLists.txt
test/tests/: CMakeLists.txt  hello_test.cpp  main.cpp  table_test.cpp  test_buffer.cpp  test_chisq.cpp  test_config.h.in  test_covar.cpp  test_geno.cpp  test_grm.cpp  test_logger.cpp  test_marker.cpp  test_matrix.cpp  test_pheno.cpp  test_thread.cpp  test_thread.cpp.cpp
test/tests/data/: test.bed  test.bim  test.fam  test.phen
v1/: CommFunc.h  Makefile  data.cpp  edata.cpp  eigen_func.h  ld.cpp  mkl.cpp  mlm_assoc.cpp  popu_genet.cpp
